    the user execute bit.
  * Fix hang when an external special remote program exited but
    the stderr pipe to it was left open, due to a daemon having inherited
    the file descriptor.
  * Fix build on Windows.
  * Prevent windows assistant from trying (and failing) to upgrade
    itself, which has never been supported on windows.

 -- Joey Hess <id@joeyh.name>  Mon, 16 Nov 2020 09:38:32 -0400

git-annex (8.20201116) upstream; urgency=medium

  * move: Fix a regression in the last release that made move --to not
    honor numcopies settings.
  * sync --content: Fix a bug where a file that was not preferred content
    could be transferred to a remote. This happened when the file got deleted
    after the sync started running.
  * Warn when adding a annex symlink or pointer file that uses a key that
    is not known to the repository, to prevent confusion if the user has
    copied it from some other repository.
  * examinekey: Added two new format variables: objectpath and objectpointer
  * examinekey: Added --migrate-to-backend

 -- Joey Hess <id@joeyh.name>  Mon, 16 Nov 2020 09:36:35 -0400

git-annex (8.20201103) upstream; urgency=medium

  * move: Improve resuming a move that was interrupted after the object
    was transferred, in cases where numcopies checks prevented the resumed
    move from dropping the object from the source repository.
  * When a special remote has chunking enabled, but no chunk sizes are
    recorded (or the recorded ones are not found), speculatively try
    chunks using the configured chunk size.
  * Fixed some problems that prevented this command from working:
    git submodule foreach git annex init
  * Improve shutdown process for external special remotes and external
    backends. Make sure to relay any remaining stderr from the process,
    and potentially avoid the process getting a SIGPIPE if it writes to
    stderr too late.
  * Fix a bug that prevented linux standalone bundle from working on a fresh
    install.